tests/compile_fail/too_many_dims.rs
use fizix::alias_units;
use typenum::*;

alias_units! {
    pub Foo => ("doc", P1, P1, P1, P1, P1, P1, P1, P1, P1),
}

fn main() {}
